--- a/project-11/index.html
+++ b/project-11/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Document</title>
 </head>
 
@@ -18,7 +19,19 @@
     </header>
     <div class="main">
         <div class="form">
-            <form action="#"></form>
+            <form action="#">
+                <p class="title">Question</p>
+                <textarea class="input-filed" name="name-question" id="question" cols="48" rows="4"></textarea>
+                <p class="title">Answer</p>
+                <textarea class="input-filed" name="content-answer" id="answer" cols="48" rows="4"></textarea>
+                <div class="btn-control">
+                    <button class="btn-save btn">Save</button>
+                    <button class="btn-edit btn">Click to Edit</button>
+                </div>
+                <div class="btn-exit">
+                    <i class="fa-solid fa-xmark"></i>
+                </div>
+            </form>
         </div>
     </div>
     <script src="index.js"></script>
