--- a/project-10/index.html
+++ b/project-10/index.html
@@ -19,11 +19,21 @@
     <div class="main">
         <div class="header-box">
             <input type="text" class="input" placeholder="Input activity">
-            <div class="btn-add">
+            <div class="btn-add" title="Thêm">
                 <i class="fa-solid fa-plus"></i>
             </div>
         </div>
         <div class="list-item">
+        </div>
+    </div>
+    <div class="modal"></div>
+    <div class="box-activity">
+        <div class="repair-activity">
+            <input type="text" class="activity">
+            <div class="btn-control">
+                <button class="btn btn-cancel">Cancel</button>
+                <button class="btn btn-save">Save</button>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
