App_Manage_Student

--- a/app_manageStudent/index.html
+++ b/app_manageStudent/index.html
@@ -37,20 +37,7 @@
             <p class="list-student__title">Danh sách sinh viên</p>
             <button class="list-student__btn-add-student">Thêm sinh viên</button>
         </div>
-        <div class="box-student__infor">
-            <div class="student-item">
-                <div class="detail-infor-student">
-                    <p class="student_name">Tên sinh viên: Dung</p>
-                    <p class="student_class">Lớp: 64IT2</p>
-                    <p class="student_gpa">GPA Tích Lũy: 3.2</p>
-                </div>
-                <div class="btn-change">
-                    <i class="fa-solid fa-trash icon icon-delete"></i>
-                    <i class="fa-solid fa-wrench icon icon-edit"></i>
-                    <i class="fa-solid fa-ban icon icon-delete icon-hidden"></i>
-                </div>
-            </div>
-        </div>
+        <div class="box-student__infor"></div>
         <div class="modal"></div>
         <div class="form-student">
             <div class="form-student__form-name form">
